--- a/ZhihuSpider/src/main/resources/config.properties
+++ b/ZhihuSpider/src/main/resources/config.properties
@@ -53,7 +53,7 @@ spider.download.retry.interval.ms=1000
 spider.download.proxyPath=src/main/resources/proxies
 spider.download.saveproxyhosts.interval.ms=60000
 
-spider.proxyhost_addr_parser.xicidaili=com.it18zhang.spider.proxyHost.XicidailiProxyHostAddrParser
-spider.proxyhost_addr_parser.mimiip=com.it18zhang.spider.proxyHost.MimiIpProxyHostAddrParser
-spider.proxyhost_addr_parser.66ip=com.it18zhang.spider.proxyHost.Ip66ProxyHostAddrParser
+spider.proxyhost_addr_parser.xicidaili=com.it18zhang.spider.proxy.XicidailiProxyHostAddrParser
+spider.proxyhost_addr_parser.mimiip=com.it18zhang.spider.proxy.MimiIpProxyHostAddrParser
+spider.proxyhost_addr_parser.66ip=com.it18zhang.spider.proxy.Ip66ProxyHostAddrParser
 
